# gorrosion-gtp

./: .travis.yml  Cargo.toml  README.md
src/: command.rs  data.rs  gtp_type.rs  lib.rs  messages.rs  parse.rs
src/command/: administrative.rs  core_play.rs  mod.rs  setup.rs  tournament.rs
src/data/: alternatives.rs  boolean.rs  collection.rs  color.rs  float.rs  int.rs  list.rs  mod.rs  motion.rs  multiline_list.rs  one_liner.rs  simple_entity.rs  string.rs  vertex.rs
src/input/: controller.rs  engine.rs  mod.rs  nom.rs
src/parse/: controller.rs  mod.rs
src/parse/nom/: iter.rs  mod.rs
